# plausible-component

./: .gitignore  Cargo.toml  README.md  edgee-component.toml
.github/workflows/: check.yml  wasm-build-release.yml
src/: lib.rs
