[package]
name = "plausible-edgee-component"
version = "1.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bon = { version = "3.3.2", features = ["implied-bounds"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
wit-bindgen = "0.41.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
uuid = { version = "1.16.0", features = ["v4"] }
